--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <!-- Encabezado -->
   <div class="header">
-    <img src="cessilia.jpeg" alt="Cessilia Corbray">
+    <img src="cessilia.jpg" alt="Cessilia Corbray">
     <div class="header-info">
       <h1>Cessilia Corbray</h1>
       <h2>Consejera de la Casa Corbray</h2>
